{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 30,
  "lineage": "ad5e53c7-b0d1-b13b-d9c9-9fb2606851a3",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d98e75734a57843",
            "arn": "arn:aws:ec2:us-east-1:506234426979:elastic-ip/eipalloc-04d98e75734a57843",
            "association_id": "eipassoc-03427ef48d130bd88",
            "domain": "vpc",
            "id": "eipalloc-04d98e75734a57843",
            "instance": "i-06c5e1941a5438d55",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00d32f4cb8a74bd05",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-52-72-133-29.compute-1.amazonaws.com",
            "public_ip": "52.72.133.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "john-security-eip",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-eip",
              "Project": "john-security"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_instance.web",
            "module.ec2.aws_key_pair.main",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f021a2f2aadc4b9b",
            "arn": "arn:aws:ec2:us-east-1:506234426979:instance/i-06c5e1941a5438d55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "john-security-ec2-profile",
            "id": "i-06c5e1941a5438d55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "john-security-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d32f4cb8a74bd05",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-3-239-32-15.compute-1.amazonaws.com",
            "public_ip": "3.239.32.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ff0a0704819d4005",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f399d0367119a26a",
            "tags": {
              "Name": "john-security-web-server",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-web-server",
              "Project": "john-security"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074db8f2a60836db5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_key_pair.main",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.vpc.aws_security_group.web",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:internet-gateway/igw-0c463e54b85961519",
            "id": "igw-0c463e54b85961519",
            "owner_id": "506234426979",
            "tags": {
              "Name": "john-security-igw",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-igw",
              "Project": "john-security"
            },
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:route-table/rtb-029f7ec4a1cac4bae",
            "id": "rtb-029f7ec4a1cac4bae",
            "owner_id": "506234426979",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c463e54b85961519",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "john-security-public-rt",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-public-rt",
              "Project": "john-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00802e8a847a78511",
            "route_table_id": "rtb-029f7ec4a1cac4bae",
            "subnet_id": "subnet-0f399d0367119a26a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:security-group/sg-0ef93eab8d87fe2d6",
            "description": "Allow SSH only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef93eab8d87fe2d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "john-security-bastion-sg",
            "name_prefix": "",
            "owner_id": "506234426979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-security-bastion-sg",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-bastion-sg",
              "Project": "john-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:security-group/sg-074db8f2a60836db5",
            "description": "Allow HTTP, HTTPS and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074db8f2a60836db5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "john-security-web-sg",
            "name_prefix": "",
            "owner_id": "506234426979",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "john-security-web-sg",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-web-sg",
              "Project": "john-security"
            },
            "timeouts": null,
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:subnet/subnet-04b6524998a459f51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b6524998a459f51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506234426979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "john-security-private-subnet",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-private-subnet",
              "Project": "john-security"
            },
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:subnet/subnet-0f399d0367119a26a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f399d0367119a26a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506234426979",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "john-security-public-subnet",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-public-subnet",
              "Project": "john-security"
            },
            "vpc_id": "vpc-010c680d58f06e032"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506234426979:vpc/vpc-010c680d58f06e032",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-037d2b0e1e9286db3",
            "default_route_table_id": "rtb-071c681084bc52924",
            "default_security_group_id": "sg-0e7a2904894b9089b",
            "dhcp_options_id": "dopt-066678ed41ac4c12c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010c680d58f06e032",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071c681084bc52924",
            "owner_id": "506234426979",
            "tags": {
              "Name": "john-security-vpc",
              "Project": "john-security"
            },
            "tags_all": {
              "Name": "john-security-vpc",
              "Project": "john-security"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}